Fix the alignment

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@
 	color: skyblue;
 }
 .paragraph{
+    width: 100%;
 	color: skyblue;
 	background-color: transparent;
 	text-align: center;
